--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
         />
         <input type="submit" value="Log In" />
       </form>
+      <h2 id="clock">00:00</h2>
       <h1 class="hidden" id="greeting"></h1>
-      <h2 id="clock"></h2>
-    <div class="greeting hidden"></div>
-    <script src="js/clock.js"></script>
+      <div id="quote">
+        <span></span>
+        <span></span>
+      </div>
+       <script src="js/clock.js"></script>
     <script src="js/greetings.js"></script>
+    <script src="js/qoutes.js"></script>
+</body>
 </body>
 </html>
