--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body >
     <form class="hidden" id="login-form">
         <input
           required
@@ -22,9 +22,11 @@
         <span></span>
         <span></span>
       </div>
+      
        <script src="js/clock.js"></script>
     <script src="js/greetings.js"></script>
     <script src="js/qoutes.js"></script>
+    <script src="js/background.js"></script>
 </body>
 </body>
 </html>
