--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       </form>
       <h2 id="clock">00:00</h2>
       <h1 class="hidden" id="greeting"></h1>
+      <form id ="todo-form">
+        <input type="text" placeholder="write to do and press Enter"/>
+      </form>
+      <ul id="todo-list">
+        
+      </ul>
       <div id="quote">
         <span></span>
         <span></span>
@@ -27,6 +33,7 @@
     <script src="js/greetings.js"></script>
     <script src="js/qoutes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
 </body>
 </body>
 </html>
